--- a/MovieTrending/MovieTrending/Controllers/MainViewController/MainViewController.xib
+++ b/MovieTrending/MovieTrending/Controllers/MainViewController/MainViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="MovieTrending" customModuleProvider="target">
             <connections>
+                <outlet property="activityIndicator" destination="WAP-XD-UkY" id="pCT-yq-0cg"/>
                 <outlet property="tableView" destination="otj-3a-R6x" id="2aQ-M7-oKF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -19,6 +20,10 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="WAP-XD-UkY">
+                    <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                    <color key="color" systemColor="systemGray2Color"/>
+                </activityIndicatorView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="otj-3a-R6x">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -29,8 +34,10 @@
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="otj-3a-R6x" secondAttribute="trailing" id="5vr-1a-4TC"/>
                 <constraint firstItem="otj-3a-R6x" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="W10-QA-i64"/>
+                <constraint firstItem="WAP-XD-UkY" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="cf5-Pj-ewu"/>
                 <constraint firstItem="otj-3a-R6x" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jsn-K6-H7d"/>
                 <constraint firstItem="otj-3a-R6x" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="lwe-9v-Vpe"/>
+                <constraint firstItem="WAP-XD-UkY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="vuo-TE-gSF"/>
             </constraints>
             <point key="canvasLocation" x="140.57971014492756" y="80.357142857142847"/>
         </view>
@@ -38,6 +45,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
