--- a/MovieTrending/MovieTrending/View/MainMovieCell/MainMovieCell.xib
+++ b/MovieTrending/MovieTrending/View/MainMovieCell/MainMovieCell.xib
@@ -10,36 +10,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainMovieCell" rowHeight="114" id="KGk-i7-Jjw" customClass="MainMovieCell" customModule="MovieTrending" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MainMovieCell" rowHeight="137" id="KGk-i7-Jjw" customClass="MainMovieCell" customModule="MovieTrending" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="137"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="114"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="137"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5KB-gQ-ww9">
-                        <rect key="frame" x="16" y="8" width="288" height="98"/>
+                        <rect key="frame" x="16" y="8" width="288" height="120"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uq5-pn-D9z">
-                                <rect key="frame" x="8" y="-5" width="76" height="108"/>
+                                <rect key="frame" x="8" y="-5" width="88" height="125"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="uq5-pn-D9z" secondAttribute="height" multiplier="45:64" id="v3I-BL-u0p"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="has-48-7y9">
-                                <rect key="frame" x="91" y="-5" width="189" height="26.5"/>
+                                <rect key="frame" x="103" y="-5" width="177" height="26.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2AH-Cq-4aY">
-                                <rect key="frame" x="91" y="53" width="189" height="21"/>
+                                <rect key="frame" x="103" y="70" width="177" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8rM-2n-P77">
-                                <rect key="frame" x="91" y="82" width="189" height="21"/>
+                                <rect key="frame" x="103" y="99" width="177" height="21"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -51,8 +51,9 @@
                             <constraint firstItem="8rM-2n-P77" firstAttribute="bottom" secondItem="uq5-pn-D9z" secondAttribute="bottom" id="0xo-Zc-yQp"/>
                             <constraint firstAttribute="trailing" secondItem="8rM-2n-P77" secondAttribute="trailing" constant="8" id="7ng-D3-R4g"/>
                             <constraint firstItem="uq5-pn-D9z" firstAttribute="top" secondItem="5KB-gQ-ww9" secondAttribute="top" constant="-5" id="FhR-KC-fWL"/>
-                            <constraint firstAttribute="bottom" secondItem="uq5-pn-D9z" secondAttribute="bottom" constant="-5" id="J8n-QK-nCV"/>
+                            <constraint firstAttribute="bottom" secondItem="uq5-pn-D9z" secondAttribute="bottom" id="Hlu-xx-lqO"/>
                             <constraint firstItem="uq5-pn-D9z" firstAttribute="leading" secondItem="5KB-gQ-ww9" secondAttribute="leading" constant="8" id="OxU-7n-8Jn"/>
+                            <constraint firstAttribute="height" constant="120" id="Yal-fD-LSE"/>
                             <constraint firstItem="has-48-7y9" firstAttribute="top" secondItem="uq5-pn-D9z" secondAttribute="top" id="ZcY-QR-Ygx"/>
                             <constraint firstAttribute="trailing" secondItem="has-48-7y9" secondAttribute="trailing" constant="8" id="gvf-6O-7Lj"/>
                             <constraint firstItem="8rM-2n-P77" firstAttribute="leading" secondItem="uq5-pn-D9z" secondAttribute="trailing" constant="7" id="ltD-VJ-eWq"/>
@@ -79,7 +80,7 @@
                 <outlet property="nameLabel" destination="has-48-7y9" id="bGb-YP-JBh"/>
                 <outlet property="rateLabel" destination="8rM-2n-P77" id="oYa-8P-mc7"/>
             </connections>
-            <point key="canvasLocation" x="-23.188405797101453" y="103.79464285714285"/>
+            <point key="canvasLocation" x="-23.188405797101453" y="111.49553571428571"/>
         </tableViewCell>
     </objects>
     <resources>
